fixed white spaces and popup modal

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -301,7 +301,7 @@ input[type="number"]::-webkit-outer-spin-button {
     .ant-select-customize-input
   )
   .ant-select-selector {
-  background-color: #cdcaca;
+  background-color: #cdcaca !important;
 }
 
 /* DATE PICKER IN VIEW PROPERTY PAGE */
